--- a/bases_flask/templates/_macros.html
+++ b/bases_flask/templates/_macros.html
@@ -25,7 +25,19 @@
     <div class="mb-3">
         <label><input type="{{ type }}" name="{{ name }}" value="{{ value }}" required> {{ value }}</label><br>
     </div>
-    
-
 {% endmacro %}
 
+
+
+{% macro render_field(field) %}
+  <dt>{{ field.label }}
+  <dd>{{ field(**kwargs)|safe }}
+  {% if field.errors %}
+    <ul class=errors>
+    {% for error in field.errors %}
+      <li style="color:red;">{{ error }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+  </dd>
+{% endmacro %}
